--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -1,15 +1,46 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-<form action="expense/add" method="post">
-<input type ="text" name="name"/>
-<input type ="text" name="price"/>
-<input type ="text" name="category"/>
-<input type="submit">
-</form>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
+    <title>Cover Template for Bootstrap</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/cover.css" rel="stylesheet">
+  </head>
+
+  <body class="text-center">
+
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+<header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand"></h3>
+          <nav class="nav nav-masthead justify-content-center">
+            
+          </nav>
+        </div>
+      </header>
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">Expense Tracker</h1>
+        <p class="lead">Track all your expenses here so that you can stay on top of your spending habits by making informed choices the next time you spend !</p>
+        <p class="lead">
+          <a href="homepage.html" class="btn btn-lg btn-secondary">Get Started</a>
+        </p>
+      </main>
+<footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>A demo project by Madhusudhan</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
