--- a/app/src/main/webapp/homepage.html
+++ b/app/src/main/webapp/homepage.html
@@ -35,7 +35,7 @@
           <div class="card-body">
             
           <ul class="list-unstyled mt-3 mb-4">
-              <li>Just spent on your money on something?</li>
+              <li>Just spent your money on something?</li>
               <li>Click the button below to record it</li>
             </ul>
             <a type="button" href="expense/add-view" class="btn btn-lg btn-block btn-outline-primary">Let's Go</a>
